package edu.fiuba.algo3;

public interface DeckValidator {
    boolean validate();
}
