package edu.fiuba.algo3;

public class DiscardPile extends CardCollection {
    public DiscardPile() {
        super();
    }
}
