package edu.fiuba.algo3;

public class Scorch extends Special {
    public Scorch(String name, String description) {
        super(name, description);
    }
}
