package edu.fiuba.algo3.modelo;

public class Agile implements Modifier{
    @Override
    public void apply(Row row) {}
}
