package edu.fiuba.algo3.modelo;

public interface Section {
    void placeCard(Card card);
}
